--- a/survey-app/src/App.css
+++ b/survey-app/src/App.css
@@ -8,11 +8,11 @@
   --font-weight: 300;
   --bold-font-weight: 700;
   --color-content-bg: #fff;
-  --color-content-text: #3c1053;
+  --color-content-text: #5C068C;
   --color-content-link: #00ab8e;
   --color-content-link-hover: #2c103d;
   --color-content-primary: #00ab8e;
-  --color-content-secondary: #5C068C;
+  --color-content-secondary: #3c1053;
   --color-content-faded: #999;
 }
 
