--- a/survey-app/src/App.css
+++ b/survey-app/src/App.css
@@ -317,7 +317,7 @@ a:focus {
 .input-group {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* Aligns items to the start of the container */
+  align-items: center; /* Aligns items to the start of the container */
   width: 50%; /* Adjust based on your preference */
   margin-bottom: 15px;
 }
